--- a/Sports Statistics Application/index.html
+++ b/Sports Statistics Application/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Standings | NBA</title>
   </head>
-  <body onload="navbarStart()">
+  <body onload="start()">
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="">
@@ -37,11 +37,11 @@
 
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item"> Standings </a>
+          <a class="navbar-item" href="./index.html"> Standings </a>
 
-          <a class="navbar-item"> Games </a>
+          <a class="navbar-item" href="./games.html"> Games </a>
 
-          <a class="navbar-item">
+          <a class="navbar-item" href="./admin.html">
             Admin
             <!--input games-->
           </a>
@@ -54,7 +54,7 @@
                   <span class="icon-text">
                     <span>Eastern Conference</span>
                     <span class="icon">
-                      <i class="fas fa-chevron-right"></i>
+                      <i class="fa-regular fa-angle-down"></i>
                     </span>
                   </span>
                 </a>
@@ -65,7 +65,7 @@
                   <span class="icon-text">
                     <span>Western Conference</span>
                     <span class="icon">
-                      <i class="fas fa-chevron-right"></i>
+                      <i class="fa-regular fa-angle-down"></i>
                     </span>
                   </span>
                 </a>
@@ -127,4 +127,12 @@
   </body>
   <script src="teams.js"></script>
   <script src="script.js"></script>
+
+  <script>
+    function start() {
+      navbarStart();
+      createTable(teams, "Eastern");
+      createTable(teams, "Western");
+    }
+  </script>
 </html>
