--- a/Sports Statistics Application/games.html
+++ b/Sports Statistics Application/games.html
@@ -10,12 +10,12 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
     <title>Games | NBA</title>
   </head>
-  <body onload="navbarStart()">
+  <body onload="start()">
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="">
@@ -54,7 +54,7 @@
                   <span class="icon-text">
                     <span>Eastern Conference</span>
                     <span class="icon">
-                      <i class="fa-regular fa-angle-down"></i>
+                      <i class="fa-solid fa-angle-down has-text-link"></i>
                     </span>
                   </span>
                 </a>
@@ -65,7 +65,7 @@
                   <span class="icon-text">
                     <span>Western Conference</span>
                     <span class="icon">
-                      <i class="fa-regular fa-angle-down"></i>
+                      <i class="fa-solid fa-angle-down has-text-link"></i>
                     </span>
                   </span>
                 </a>
@@ -78,7 +78,112 @@
     </nav>
 
     <div>
-      <input type="date" />
+      <input type="date" id="date" onchange="displayGames()" />
     </div>
+    <div class="columns">
+      <div class="column" id="allGames"></div>
+    </div>
+
+    <nav class="pagination" role="navigation" aria-label="pagination">
+      <a class="pagination-previous is-disabled" title="This is the first page"
+        >Previous</a
+      >
+      <a class="pagination-next">Next page</a>
+      <ul class="pagination-list">
+        <li>
+          <a
+            class="pagination-link is-current"
+            aria-label="Page 1"
+            aria-current="page"
+            >1</a
+          >
+        </li>
+      </ul>
+    </nav>
   </body>
+  <script src="teams.js"></script>
+  <script src="script.js"></script>
+  <script>
+    function start() {
+      navbarStart();
+    }
+
+    function displayGames() {
+      const teams = JSON.parse(localStorage.getItem("teams"));
+
+      let date = new Date(document.getElementById("date").value);
+
+      teams.forEach((team) => {
+        team.games.forEach((game) => {
+          if (new Date(game.date).getTime() === date.getTime()) {
+            const opp = teams.find((team) => team.name === game.opp);
+
+            let card = document.createElement("div");
+            card.classList.add("card");
+            let cardContent = document.createElement("div");
+            cardContent.classList.add("card-content");
+            card.append(cardContent);
+            let content = document.createElement("div");
+            content.classList.add("content");
+            cardContent.append(content);
+            let cardContentPage = document.createElement("div");
+            cardContentPage.classList.add("card-content");
+            content.append(cardContentPage);
+            let cardContentOpp = document.createElement("div");
+            cardContentOpp.classList.add("card-content");
+            content.append(cardContentOpp);
+
+            let homeTeam = document.createElement("p");
+            homeTeam.classList.add(
+              "title",
+              "is-4",
+              "is-flex",
+              "is-justify-content-space-between"
+            );
+            homeTeam.textContent = team.name;
+            cardContentPage.append(homeTeam);
+            let homeTeamPoints = document.createElement("p");
+            homeTeamPoints.classList.add(
+              "title",
+              "is-4",
+              "is-flex",
+              "is-justify-content-space-between"
+            );
+            homeTeamPoints.textContent = game.score[0];
+            homeTeam.append(homeTeamPoints);
+            let homeTeamScore = document.createElement("p");
+            homeTeamScore.classList.add("title", "is-6");
+            homeTeamScore.textContent = `${team.W} - ${team.L}`;
+            cardContentPage.append(homeTeamScore);
+
+            let oppTeam = document.createElement("p");
+            oppTeam.classList.add(
+              "title",
+              "is-4",
+              "is-flex",
+              "is-justify-content-space-between"
+            );
+            oppTeam.textContent = game.opp;
+            cardContentOpp.append(oppTeam);
+            let oppTeamPoints = document.createElement("p");
+            oppTeamPoints.classList.add(
+              "title",
+              "is-4",
+              "is-flex",
+              "is-justify-content-space-between"
+            );
+            oppTeamPoints.textContent = game.score[1];
+            oppTeam.append(oppTeamPoints);
+            let oppTeamScore = document.createElement("p");
+            oppTeamScore.classList.add("title", "is-6");
+            oppTeamScore.textContent = `${opp.W} - ${opp.L}`;
+            cardContentOpp.append(oppTeamScore);
+
+            let games = document.getElementById("allGames");
+            games.append(card);
+          }
+        });
+      });
+    }
+  </script>
 </html>
